<resources>
    <string name="app_name">Security Messenger</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bem vindo !"</string>
    <string name="invalid_username">Não é um usuário válido</string>
    <string name="invalid_password">A senha deve conter mais de 5 caracteres</string>
    <string name="login_failed">Falha na autenticação</string>
    <string name="register_message">Se você não é cadastrado, entre aqui</string>
    <string name="action_register">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="bSelectImg">Foto</string>
    <string name="contacts">Contatos</string>
    <string name="logout">Sair</string>
    <string name="btn_chat">Enviar</string>
    <string name="message">Digite a mensagem</string>
    <string name="txt_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque hendrerit suscipit erat non porttitor. Donec at ipsum sit amet diam hendrerit porttitor non a dolor. Duis ornare eros sit amet dignissim varius. Suspendisse pharetra in lacus at congue. Nulla augue diam, pharetra malesuada tincidunt eu, consequat ac mauris. Nunc tristique pretium tortor, id vestibulum dolor varius sit amet. Duis viverra nisi bibendum metus efficitur, et consequat ipsum dapibus. Sed id leo eget nisi porttitor interdum. Cras consequat dignissim est, sit amet vulputate augue. Praesent turpis libero, semper sed odio in, rutrum tempor ipsum. In elementum, magna a ultricies viverra, neque odio feugiat orci, a sollicitudin quam eros at arcu. Nulla ac finibus lacus. Ut lacus ante, faucibus in tellus et, fermentum egestas velit. Praesent enim nisi, faucibus in nulla a, volutpat accumsan est. Vestibulum porta nisl ut purus sollicitudin pretium. Praesent in fermentum libero, rutrum volutpat sapien.</string>
    <string name="txt_base">Digite a mensagem</string>
</resources>
